# StructSense

./: LICENSE  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  verify_export.py  verify_fix.py
backend/alembic/: env.py
backend/alembic/versions/: 694a97213b94_refactor_sensor_tables_v2.py
backend/app/: db.py  initial_data.py  main.py
backend/app/api/: deps.py  routes.py
backend/app/api/endpoints/: accounts.py  auth.py  device_page.py  devices.py  health.py  sensor.py  signup.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  access.py  device.py  processed_sensor_data.py  raw_sensor_data.py  sensor_reading.py  user.py
backend/app/schemas/: __init__.py  access.py  account.py  device.py  sensor.py  sensor_reading.py  transaction.py  user.py
backend/app/services/: __init__.py  device_service.py  sensor_service.py
backend/app/templates/: devices.html  signup.html  upload.html
frontend/: Dockerfile  Dockerfile.dev  components.json  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/(root)/: page.tsx
frontend/app/auth/: layout.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/health/: page.tsx
frontend/components/dashboard/: axis-chart.tsx  distance-chart.tsx  page-header.tsx  sensor-chart.tsx  system-health-dialog.tsx
frontend/components/navigation/: AdminNavbar.tsx  Breadcrumb.tsx  app-sidebar.tsx  nav-footer.tsx  nav-support.tsx
sensor_code/: Tilt_sensor_code.ino
(+10 files in other folders)
