[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.129.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
