[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.129.0",
    "gunicorn>=23.0.0",
    "passlib[argon2]>=1.7.4",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "jinja2>=3.1.6",
    "alembic>=1.18.4",
    "openpyxl>=3.1.2",
    "python-dateutil>=2.9.0.post0",
]
